<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        android:id="@+id/details_coordinator_layout"
        tools:context="com.example.anuja.popularmoviesstagetwo.app.activity.MovieDetailsActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsible_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/iv_movie_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:background="@color/colorAccent"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier=".7" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:behavior_overlapTop="30dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants">

                <android.support.v7.widget.CardView
                    android:id="@+id/cv_poster"
                    android:layout_width="150dp"
                    android:layout_height="210dp"
                    android:layout_marginBottom="@dimen/margin"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginTop="@dimen/margin_small"
                    android:elevation="8dp"
                    app:cardCornerRadius="2dp">

                    <ImageView
                        android:id="@+id/iv_movie_dt_poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#b71c1c"
                        android:scaleType="centerCrop" />
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/tv_movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginTop="50dp"
                    android:layout_toEndOf="@+id/cv_poster"
                    android:layout_toRightOf="@+id/cv_poster"
                    android:fontFamily="sans-serif"
                    tools:text="Title"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lbl_movie_ratings"
                    style="@style/TextStyle"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_below="@+id/tv_movie_title"
                    android:layout_toEndOf="@+id/cv_poster"
                    android:layout_toRightOf="@+id/cv_poster"
                    android:text="@string/str_movie_rating"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_movie_ratings"
                    style="@style/TextStyle"
                    android:layout_below="@+id/lbl_movie_ratings"
                    android:layout_toEndOf="@+id/cv_poster"
                    android:layout_toRightOf="@+id/cv_poster" />

                <TextView
                    android:id="@+id/lbl_movie_release"
                    style="@style/TextStyle"
                    android:layout_below="@+id/tv_movie_ratings"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_toEndOf="@+id/cv_poster"
                    android:layout_toRightOf="@+id/cv_poster"
                    android:text="@string/str_movie_release_date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_movie_release"
                    style="@style/TextStyle"
                    android:layout_below="@+id/lbl_movie_release"
                    android:layout_toEndOf="@+id/cv_poster"
                    android:layout_toRightOf="@+id/cv_poster" />

                <View
                    android:id="@+id/viewp"
                    style="@style/ViewStyle"
                    android:layout_below="@id/cv_poster" />

                <TextView
                    android:id="@+id/lbl_movie_plot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/viewp"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginTop="@dimen/margin_small"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/black"
                    android:text="@string/str_movie_plot"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/margin_small"
                    tools:text="Plot"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_movie_plot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lbl_movie_plot"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginBottom="@dimen/margin"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/black"
                    tools:text="Plot"
                    android:textSize="16sp" />

                <View
                    android:id="@+id/viewt"
                    style="@style/ViewStyle"
                    android:layout_below="@id/tv_movie_plot" />

                <TextView
                    android:id="@+id/lbl_movie_trailers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/viewt"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginTop="@dimen/margin_small"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/black"
                    android:text="@string/str_movie_trailers"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/margin_small"
                    tools:text="Trailers"
                    android:textSize="16sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rview_trailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lbl_movie_trailers"
                    android:scrollbars="none"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginTop="@dimen/margin_large"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/margin_small">

                </android.support.v7.widget.RecyclerView>

                <View
                    android:id="@+id/viewr"
                    style="@style/ViewStyle"
                    android:layout_below="@id/rview_trailers" />

                <TextView
                    android:id="@+id/lbl_movie_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/viewr"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginTop="@dimen/margin_small"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/black"
                    android:text="@string/str_movie_reviews"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/margin_small"
                    tools:text="Reviews"
                    android:textSize="16sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rview_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lbl_movie_reviews"
                    android:scrollbars="none"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/margin_small">

                </android.support.v7.widget.RecyclerView>
            </RelativeLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Design.FloatingActionButton"
            android:elevation="6dp"
            android:layout_marginRight="8dp"
            app:layout_anchor="@+id/collapsible_toolbar"
            app:layout_anchorGravity="bottom|end"
            app:backgroundTint="@android:color/white"
            android:src="@drawable/ic_fab_unselected" />
    </android.support.design.widget.CoordinatorLayout>
</layout>